@@ -18,6 +18,9 @@
    pass.  This ensurse the output files are seen when spinning the tree
    into the output directory.
 
+ - Always recreate GnuPG signatures when generating distribution tarballs
+   in docknot dist.
+
 6.01 - 2022-01-15
 
  - Add new docknot release command and corresponding App::DocKnot::Release
